fix vertical gap beetween col

--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ a{
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        gap: 25px 10px;
+        gap: 35px 10px;
         padding: 20px 15px 0 30px;
         overflow-y: auto;
         overflow-x: hidden;
